

timeiticondir = ${prefix}/share/pixmaps

timeiticon_DATA = \
	timeit.svg
	

images_DATA = \
	blank.png\
	blank.svg \
	icon.svg \
	problem.png \
	running.svg \
	timeit.svg

imagesdir = \
	$(pkgdatadir)

EXTRA_DIST = \
	$(images_DATA) \
	$(timeiticon_DATA)

## File created by the gnome-build tools

